# grand-daq-dunhuang

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  Makefile  README.md  build.sh  build_tflite.sh  controlbash.sh  copy_to_arm.sh  data_format.cpp  data_format.h  duantest.sh  eformat.h  env-pmoo.sh  env.sh  errorsRecord.txt  gp80_antenna_distances.txt  l3OfflineTrigger.cpp  l3OfflineTrigger.h  l3control.yaml  macros.cmake  package.sh  ~
ana/: FPGA_ttd.txt  ana_tvd.py  log.txt
ana/wireless_results/: FPGA_ttd_20hz.txt
baks/cfgs_baks/: DU-readable-conf.yaml  DU-readable-conf_xishui.beacon.yaml  DU-readable-conf_xishui.yaml  multipleDUsConfigurationTest3_GP13.xlsx  sysconfig_SingleDUs.yaml  sysconfig_xishui.beacon.yaml
cfgs/: DU-address-map.yaml  DU-readable-conf.yaml  DU-readable-conf.yaml.bup  DU-readable-conf.yaml_1024points  DU-readable-conf.yaml_11DUs_L1  DU-readable-conf.yaml_20hz  DU-readable-conf.yaml_4096points  DU-readable-conf.yaml_bohao  DU-readable-conf.yaml_for_6dus_L1  DU-readable-conf_Bohao_250617.yaml  DU-readable-conf_common.yaml  DU-readable-conf_gp43.yaml  backup_DU-readable-conf.yaml  controlCsdaqRun.sh  modifyTest8.py  multipleDUSysControl  multipleDUsConfigurationTest3.xlsx  multipleDUsConfigurationTest3_allDUs.xlsx  sysconfig.yaml  sysconfig.yaml_11DUs_L1  sysconfig.yaml_4096points  sysconfig.yaml_6DUs  sysconfig.yaml_for_6dus_L1  sysconfig.yaml_for_DU76  sysconfig_1.yaml  sysconfig_2.yaml  sysconfig_58DUs_CD.yaml  sysconfig_dunhuang_reference.yaml  sysconfig_gp43.yaml  sysconfig_singleDU.yaml  sysconfig_underTest.yaml
cfgs/baks/: sysconfig.yaml_5better  sysconfig.yaml_5worse  sysconfig.yaml_du13  sysconfig_bohao.yaml  sysconfig_xishui.yaml
cfgs/csdaq/: sysconfig.yaml
cfgs/logging/: data.cfg  default.cfg  elec.cfg  network.cfg
cfgs/sysconfig_baks/: sysconfig_Bohao_250617.yaml  sysconfig_CD_20250621.yaml  sysconfig_throughputTest_202506211656_dunhuangsite.yaml  sysconfig_throughputTest_20250821_dunhuangsite.yaml
cfgs/tools/: DU_ConfigGUI.py  sysGUI.py
common/: CMakeLists.txt
common/src/: CMakeLists.txt  client.cpp  client.cpp.bup1  client.h  cs_sys_config.cpp  cs_sys_config.h  cs_sys_config.h.bup  eformat.h  exceptions.h  message.cpp  message.h  message_dispatcher.cpp  message_dispatcher.h  message_impl.cpp  message_impl.h  server.cpp  server.h  types.h  utils.h  zmq_client.cpp  zmq_client.h  zmq_server.cpp  zmq_server.h
common/src/internal/: buffer_pool.cpp  buffer_pool.h  static_init.cpp
common/tests/: CMakeLists.txt  test_buffer_pool.cpp  test_communication.cpp  test_message.cpp  test_send_recv_cmd.cpp  test_server.cpp  test_server_true.cpp  test_string_format.cpp  test_time.cpp
common/tests/test/: CMakeLists.txt  server.h  test_client.cpp  utils.h  zmq_client.cpp  zmq_server.cpp
common/tests/test/internal/: thread_pool.h
cs-daq/: CMakeLists.txt  env.sh
cs-daq/exec/: CMakeLists.txt  csdaq_run.cpp
cs-daq/src/: CMakeLists.txt  commander.h  cs_sys_config.cpp  cs_sys_config.h  csdaq_app.cpp  csdaq_app.cpp.bup  csdaq_app.h  data_format.cpp  data_format.h  elec_config.cpp  elec_config.h  event_store.cpp  event_store.h  network_factory.h  raw_event_store.cpp  raw_event_store.h  scope.h  status_processor.cpp  status_processor.h  sys_config.cpp  sys_config.h  t3TriggerAlgorithm.cpp  t3_trigger.cpp  t3_trigger.h  t3_trigger_debug_updated.cpp  t3_trigger_old.cpp  t3_trigger_whole_data_flow.cpp
cs-daq/tests/: CMakeLists.txt  test_cs_sys_config.cpp  test_csdaq_app.cpp  test_elec_config.cpp  test_event_store.cpp  test_sys_config.cpp
decode/: CMakeLists.txt  decode_raw_data.cpp  decode_t3_data.cpp  decode_t3_orignal_version.cpp  decode_v1_0.cpp
du-daq/: CMakeLists.txt
du-daq/exec/: CMakeLists.txt  dudaq_run.cpp
du-daq/src/: CMakeLists.txt  data_format.cpp  data_format.h  data_manager.cpp  data_manager.h  data_manager_V1.3.1_step1.cpp  du_exceptions.h  du_fsm.cpp  du_fsm.h  du_sys_config.h  dudaq_app.cpp  dudaq_app.h  frontend.cpp  frontend.h  scope.h  scope_a.cpp  scope_a.h  scope_dummy.cpp  scope_dummy.h  std_types.h  sys_config.h  tflite_inference.cpp  tflite_inference.h  trigger_grand.tflite
du-daq/src/test/: ipv4_test2.cpp  ipv4_test2_arm
du-daq/tests/: CMakeLists.txt  test_data_manager.cpp  test_elec_scope_a.cpp  test_frontend.cpp  test_scope_dummy.cpp
grand-daq/: controlbash.sh  env.sh  package.sh  ssh_dus.sh  totalcount.txt
grand-daq/ana/: FPGA_ttd_124hz_us.txt  FPGA_ttd_us.txt
grand-daq/ana/wireless_results/: FPGA_ttd_124hz.txt  ana_tvd.py
grand-daq/cfgs/: DU-address-map.yaml  DU-readable-conf.yaml  modifyYAML.cpp  sysconfig.yaml
grand-daq/common/src/: cs_sys_config.cpp  message.cpp  message_impl.cpp  zmq_client.cpp
grand-daq/cs-daq/: macros.cmake
grand-daq/cs-daq/src/: csdaq_app.cpp  data_format.cpp  elec_config.cpp  elec_config.h  raw_event_store.h  t3_trigger.cpp
grand-daq/cs-daq/tests/: test_elec_config.cpp
grand-daq/decode/: decode_raw_data.cpp
grand-daq/du-daq/exec/: dudaq_run.cpp
grand-daq/du-daq/src/: data_format.cpp  data_manager.cpp  data_manager.h  du_sys_config.cpp  dudaq_app.cpp  frontend.cpp  frontend.h  scope_a.cpp  scope_a.h
releases/: README.md  env-arm.sh  env-x86_64.sh  env.sh
scripts/: du_kill.sh  du_kill_all.sh  du_run.sh  du_run_all.sh  setup_log_level.py
sh_controls/: control_dus.sh
sh_controls/sh_subcontrols/: control_38.sh  control_39.sh  control_77.sh  control_79.sh  control_80.sh  control_85.sh  control_86.sh  control_87.sh  control_94.sh
somebashes/: BRD_rst.sh  csdaqAutoRun.sh  do.sh  duAutoRebootPerday.sh  dudaqAutoMultipleRun_1.sh  dudaqAutoMultipleRun_2.sh  dudaqAutoMultipleRun_L1mode_11DUs.sh  dudaqAutoMultipleRun_L1mode_6DUs.sh  dudaqAutoRun.sh  exe.sh  exe_dudaq_run.sh  exe_dunhuang_bohao.sh  ifreboot.sh  one2multipleIperf3.sh  step1.sh  test.sh
somebashes/LOGs/: 202408150026_CS_auto_run  202408150042_CS_auto_run  202408150045_CS_auto_run  202408150106_CS_auto_run  202408152026_CS_auto_run  202408241234_CS_auto_run
tests/: CMakeLists.txt  test_statemachine_cscommand.cpp
useful_bashes/: Process_monitoring.sh
(+7 files in other folders)
